--- a/PlexAppClient/res/layout/activity_movie_browser.xml
+++ b/PlexAppClient/res/layout/activity_movie_browser.xml
@@ -1,24 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout  
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:id="@+id/movieBrowserBackgroundLayout"
+    android:layout_width="fill_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_movie_art"
-    android:padding="5dp"
     android:orientation="vertical"
-    tools:context=".MovieBrowserActivity" >
+    android:padding="5dp"
+    tools:context=".ui.browser.movie.MovieBrowserActivity" >
 
     <TableRow
         android:id="@+id/movieDetailsRow"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="250dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:layout_marginTop="25dp"
-        android:gravity="center" >
+        android:gravity="center">
          
-        <LinearLayout android:id="@+id/movieDetailsLayout"
-              android:layout_width="match_parent"
+        <TableLayout android:id="@+id/movieDetailsLayout"
+              android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:background="@drawable/rounded_corners"
               android:orientation="vertical"
@@ -31,7 +33,7 @@
                <TextView
                    android:layout_marginTop="5dp"
                    android:text="Movie Details"
-                   android:layout_width="400dip"
+                   android:layout_width="450dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
@@ -42,7 +44,7 @@
                
                <TextView
                    android:layout_marginTop="5dp"
-                   android:layout_width="wrap_content"
+                   android:layout_width="450dp"
                    android:layout_height="wrap_content"                   
                    android:text="Plot"
                    android:textColor="#F0F0F0"
@@ -56,27 +58,25 @@
               android:layout_height="wrap_content" 
                >
 
-               <TextView
+               <TextView android:id="@+id/movieCastInfo"
                    android:layout_width="400dip"
                    android:layout_height="150dip"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
-                   android:text="Actor/Director
-Writer
-etc"
                    android:textColor="#F0F0F0"
-                   android:textSize="16dp" />
+                   android:textSize="16sp"
+                   android:maxLines="8"
+                   android:scrollbars="vertical" />
                
-               <TextView
+               <TextView android:id="@+id/movieSummary"
                    android:layout_marginTop="5dp"
-                   android:layout_width="wrap_content"
-                   android:layout_height="150dip"                   
-                   android:text="This is a summary.
-Test.
-Test.
-Test."
+                   android:layout_width="400dip"
+                   android:layout_height="150dip"
+                   android:maxWidth="400dip"                   
                    android:textColor="#F0F0F0"
+                   android:maxLines="8"
+                   android:scrollbars="vertical"
                    android:textSize="15sp"
                     />              
            </TableRow>
@@ -84,28 +84,15 @@ Test."
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" 
                >
-              <ImageView
-                  android:id="@+id/imageView3"
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:src="@drawable/dolbydigital" />
-              <ImageView
-                  android:id="@+id/imageView4"
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:src="@drawable/hddvd" />
-              <ImageView
-                  android:id="@+id/imageView2"
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:layout_gravity="center_vertical"
-                  android:baselineAlignBottom="true"
-                  android:src="@drawable/mpaa_r" />
-              
-              
+               <LinearLayout android:id="@+id/movieInfoGraphicLayout"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content" 
+                   >
+                   
+               </LinearLayout>
            </TableRow>
             
-        </LinearLayout>
+        </TableLayout>
 
     </TableRow>
     
@@ -121,10 +108,12 @@ Test."
 
         <Gallery
             android:id="@+id/moviePosterGallery"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="120dip"
-         />
+            android:background="#50000000">
+           <requestFocus/>
+        </Gallery>
 
     </TableRow>
 
-</LinearLayout>
+</TableLayout>
