--- a/PlexAppClient/res/layout/activity_plex_app_main.xml
+++ b/PlexAppClient/res/layout/activity_plex_app_main.xml
@@ -12,8 +12,9 @@
         android:layout_height="150dp"
         android:layout_marginTop="300dp"
         android:background="#50000000"
-        android:spacing="10dp"
-        />
+        android:spacing="10dp">
+        <requestFocus/>
+    </Gallery>
 
 
 </LinearLayout>
