--- a/PlexAppClient/res/layout/activity_movie_browser.xml
+++ b/PlexAppClient/res/layout/activity_movie_browser.xml
@@ -81,11 +81,11 @@
                     />              
            </TableRow>
            <TableRow android:id="@+id/movieDetailsContainerRow3" 
-              android:layout_width="wrap_content"
+              android:layout_width="fill_parent"
               android:layout_height="wrap_content" 
                >
                <LinearLayout android:id="@+id/movieInfoGraphicLayout"
-                   android:layout_width="wrap_content"
+                   android:layout_width="fill_parent"
                    android:layout_height="wrap_content" 
                    >
                    
