Improve Browser and Main Menu performance.
* Turn off Gallery Animation by setting setAnimationDuration to 0.
* Add hardware accelleration options to the Movie Browser
* Start a back ground activity during application startup to cache
  the movies posters and background images.

The main culprit was the Gallery animation duration. Animating the Gallery
is too CPU intensive and would cause jerky scrolling.  Setting this
to zero ms provided the best performance increase on the Vizio Co-Star.

--- a/PlexAppClient/res/layout/activity_plex_app_main.xml
+++ b/PlexAppClient/res/layout/activity_plex_app_main.xml
@@ -12,7 +12,8 @@
         android:layout_height="150dp"
         android:layout_marginTop="300dp"
         android:background="#50000000"
-        android:spacing="10dp">
+        android:spacing="50dp"
+        android:animationDuration="0">
         <requestFocus/>
     </Gallery>
 
