--- a/PlexAppClient/res/layout/activity_movie_browser.xml
+++ b/PlexAppClient/res/layout/activity_movie_browser.xml
@@ -132,8 +132,10 @@
         <Gallery
             android:id="@+id/moviePosterGallery"
             android:layout_width="match_parent"
-            android:layout_height="120dip"
-            android:background="#50000000">
+            android:layout_height="120dp"
+            android:background="#50000000"
+            android:spacing="50dp"
+            android:animationDuration="1">
            <requestFocus/>
         </Gallery>
 
