--- a/PlexAppClient/res/layout/activity_plex_app_main.xml
+++ b/PlexAppClient/res/layout/activity_plex_app_main.xml
@@ -6,6 +6,13 @@
     android:orientation="vertical"
     tools:context=".MainActivity"
     android:background="@drawable/plexapp" >
+    
+    <DigitalClock 
+        android:layout_width="wrap_content" 
+        android:layout_height="wrap_content" 
+        android:textColor="#F0F0F0"
+        android:background="#50000000"
+        android:textSize="20sp"/>
 
     <Gallery android:id="@+id/mainGalleryMenu"
         android:layout_width="match_parent"
