--- a/PlexAppClient/res/layout/activity_tvbrowser_show.xml
+++ b/PlexAppClient/res/layout/activity_tvbrowser_show.xml
@@ -11,59 +11,58 @@
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
         android:background="#A0000000" >
-        
+
         <TableRow
             android:id="@+id/tvShowDetail"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp">
+            android:layout_marginLeft="20dp" >
 
             <TextView
                 android:id="@+id/tvShowDetailText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="TV Shows"
-                android:textSize="20sp"
-                android:textColor="#F0F0F0" >
+                android:textColor="#F0F0F0"
+                android:textSize="20sp" >
             </TextView>
+
             <TextView
                 android:id="@+id/tvShowDetailText"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:text="6 Items"
-                android:textSize="20sp"
-                android:gravity="right"
                 android:layout_marginLeft="140dp"
-                android:textColor="#F0F0F0" >
+                android:gravity="right"
+                android:text="6 Items"
+                android:textColor="#F0F0F0"
+                android:textSize="20sp" >
             </TextView>
-            
         </TableRow>
 
         <TableRow
             android:id="@+id/tvshowContainer"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
             android:layout_marginLeft="40dp"
-            android:layout_marginRight="40dp" >
+            android:layout_marginRight="40dp"
+            android:layout_marginTop="5dp" >
 
             <TableLayout
                 android:layout_width="420dp"
-                android:layout_height="match_parent" >
+                android:layout_height="match_parent"
+                android:layout_marginLeft="40dp">
 
                 <TableRow
-                    android:id="@+id/tvshowContainer"
                     android:layout_width="fill_parent"
-                    android:layout_height="wrap_content" >
+                    android:layout_height="wrap_content">
 
                     <ImageView
                         android:id="@+id/tvShowImage"
                         android:layout_width="410dp"
                         android:layout_height="210dp"
-                        android:scaleType="fitXY"
-                        android:background="#000000"
+                        android:background="#F0F0F0"
                         android:padding="5dp"
-                        android:src="@drawable/background_movie_art" />
+                        android:scaleType="fitXY"/>
                 </TableRow>
 
                 <TableRow
@@ -73,12 +72,13 @@
                     <TextView
                         android:id="@+id/tvBrowserTitle"
                         android:layout_width="fill_parent"
-                        android:layout_height="match_parent"
-                        android:text="Title Text"
-                        android:textSize="20sp"
-                        android:gravity="center"
+                        android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:textColor="#F0F0F0" >
+                        android:text="Title Text"
+                        android:gravity="center"
+                        android:textColor="#F0F0F0"
+                        android:textSize="20sp" >
+
                     </TextView>
                 </TableRow>
 
@@ -89,12 +89,12 @@
                     <TextView
                         android:id="@+id/tvShowBrowserGenre"
                         android:layout_width="fill_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:layout_gravity="center"
                         android:text="Genre Information"
-                        android:textSize="15sp"
-                        android:gravity="center"
-                        android:layout_marginTop="5dp"
-                        android:textColor="#F0F0F0" >
+                        android:textColor="#F0F0F0"
+                        android:textSize="15sp" >
                     </TextView>
                 </TableRow>
 
@@ -103,73 +103,62 @@
                     android:layout_height="wrap_content" >
 
                     <TextView
-                        android:id="@+id/tvShowBrowserGenre"
+                        android:id="@+id/tvShowWatchedUnwatched"
                         android:layout_width="fill_parent"
-                        android:layout_height="match_parent"
-                        android:text="Watched and Unwatched count"
+                        android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
                         android:gravity="center"
+                        android:text="Watched and Unwatched count"
                         android:textColor="#F0F0F0" >
                     </TextView>
                 </TableRow>
             </TableLayout>
 
             <LinearLayout
-                android:layout_width="450dp"
+                android:layout_width="400dp"
                 android:layout_height="300dp"
-                android:layout_marginLeft="40dp"
                 android:orientation="vertical" >
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="65dp"
-                    android:layout_margin="5dp"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/tvshow_banner1" />
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="65dp"
-                    android:layout_margin="5dp"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/tvshow_banner2" />
-                     />
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="65dp"
-                    android:layout_margin="5dp"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/tvshow_banner3" />
-                     />
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="65dp"
-                    android:layout_margin="5dp"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/tvshow_banner4" />
-                     />
-                     
+                    <TextView
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:gravity="left"
+                        android:text="Summary"
+                        android:textSize="20dp"
+                        android:textStyle="bold"
+                        android:textColor="#F0F0F0" >
+                    </TextView>           
+                
+                    <TextView
+                        android:id="@+id/tvShowSeriesSummary"
+                        android:layout_width="fill_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="5dp"
+                        android:gravity="top"
+                        android:text="Summary Information about a Show Goes here."
+                        android:textColor="#F0F0F0" >
+                    </TextView>
             </LinearLayout>
         </TableRow>
 
         <TableRow
-            android:id="@+id/tvShowDetail"
-            android:layout_width="fill_parent"
+            android:layout_width="900dip"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="40dp" >
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="15dp">
 
-            <TextView
-                android:id="@+id/tvShowDetailText"
+            <Gallery
+                android:id="@+id/tvShowBannerGallery"
                 android:layout_width="fill_parent"
-                android:layout_height="100dp"
-                android:layout_span="2"
-                android:text="This is the area for tv show detail text. The left could be used for Rating and other information."
-                android:textSize="18sp"
-                android:textColor="#F0F0F0" >
-            </TextView>
+                android:layout_height="120dp"
+                android:animationDuration="1"
+                android:background="#50000000"
+                android:spacing="10dp"
+                android:layout_span="2" >
+
+                <requestFocus />
+            </Gallery>
         </TableRow>
     </TableLayout>
 
