Browsing performance enhancements.
* Upgraded to ImageLoader 1.5.8
* Created custom ConcurrentLoader that uses ExecutorService to
  execute the AsyncTasks.  This keeps tasks from blocking each other
  a Max of 5 concurrent downloads can happen.
* Move all image retrieval off the UI thread.  Makes UI more responsive.

--- a/PlexAppClient/res/layout/activity_tvbrowser_show.xml
+++ b/PlexAppClient/res/layout/activity_tvbrowser_show.xml
@@ -3,7 +3,7 @@
     android:id="@+id/tvshowBrowserLayout"
     android:layout_width="fill_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_movie_art"
+    android:background="@drawable/tvshows"
     android:orientation="vertical"
     tools:context=".ui.browser.tv.TVShowBrowserActivity" >
 
