--- a/PlexAppClient/res/layout/activity_plex_app_main.xml
+++ b/PlexAppClient/res/layout/activity_plex_app_main.xml
@@ -1,29 +1,45 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mainLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/plexapp"
     android:orientation="vertical"
-    tools:context=".MainActivity"
-    android:background="@drawable/plexapp" >
-    
-    <DigitalClock 
-        android:layout_width="wrap_content" 
-        android:layout_height="wrap_content" 
-        android:textColor="#F0F0F0"
-        android:background="#50000000"
-        android:textSize="20sp"/>
-    
+    tools:context=".MainActivity" >
 
-    <Gallery android:id="@+id/mainGalleryMenu"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_marginTop="300dp"
-        android:background="#50000000"
-        android:spacing="50dp"
-        android:animationDuration="1">
-        <requestFocus/>
-    </Gallery>
+    <LinearLayout
+        android:id="@+id/main_menu_row1"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:orientation="horizontal" >
 
+        <DigitalClock
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#50000000"
+            android:textColor="#F0F0F0"
+            android:textSize="20sp" />
+    </LinearLayout>
 
-</LinearLayout>
+    <LinearLayout
+        android:id="@+id/menu_gallery"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="100dp"
+         >
+
+        <Gallery
+            android:id="@+id/mainGalleryMenu"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:animationDuration="1"
+            android:background="#50000000"
+            android:spacing="50dp" >
+
+            <requestFocus />
+        </Gallery>
+    </LinearLayout>
+
+</RelativeLayout>
