--- a/PlexAppClient/res/layout/activity_movie_browser.xml
+++ b/PlexAppClient/res/layout/activity_movie_browser.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout  
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/movieBrowserBackgroundLayout"
     android:layout_width="fill_parent"
@@ -10,135 +9,127 @@
     android:padding="5dp"
     tools:context=".ui.browser.movie.MovieBrowserActivity" >
 
-    <TableRow
-        android:id="@+id/movieDetailsRow"
-        android:layout_width="fill_parent"
-        android:layout_height="250dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginTop="25dp"
-        android:gravity="center">
-         
-        <TableLayout android:id="@+id/movieDetailsLayout"
-              android:layout_width="wrap_content"
-              android:layout_height="match_parent"
-              android:background="@drawable/rounded_corners"
-              android:orientation="vertical"
-                       >
-           <TableRow android:id="@+id/movieDetailsContainerRow" 
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content" 
-               >
-
-               <TextView
-                   android:layout_marginTop="5dp"
-                   android:text="Movie Details"
-                   android:layout_width="450dp"
-                   android:layout_height="wrap_content"
-                   android:layout_marginLeft="30dp"
-                   android:layout_marginRight="5dp"
-                   
-                   android:textColor="#F0F0F0"
-                   android:textSize="20sp"
-                   android:textStyle="bold" />
-               
-               <TextView
-                   android:layout_marginTop="5dp"
-                   android:layout_width="450dp"
-                   android:layout_height="wrap_content"                   
-                   android:text="Summary"
-                   android:textColor="#F0F0F0"
-                   android:textSize="20sp"
-                   android:textStyle="bold" />
-               
-               
-           </TableRow>
-           <TableRow android:id="@+id/movieDetailsContainerRow2" 
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content" 
-               >
-
-               <TextView android:id="@+id/movieCastInfo"
-                   android:layout_width="400dip"
-                   android:layout_height="150dip"
-                   android:maxWidth="350dp"
-                   android:layout_marginLeft="30dp"
-                   android:layout_marginRight="5dp"
-                   android:layout_marginTop="5dp"
-                   android:textColor="#F0F0F0"
-                   android:textSize="16sp"
-                   android:maxLines="8"
-                   android:scrollbars="vertical" />
-               
-               <TextView android:id="@+id/movieSummary"
-                   android:layout_marginTop="5dp"
-                   android:layout_marginRight="30dp"
-                   android:layout_width="350dp"
-                   android:layout_height="150dp"
-                   android:maxWidth="350dp"                   
-                   android:textColor="#F0F0F0"
-                   android:maxLines="8"
-                   android:scrollbars="vertical"
-                   android:textSize="15sp"
-                   android:paddingRight="10dp"
-                    />              
-           </TableRow>
-           <TableRow android:id="@+id/movieDetailsContainerRow3" 
-              android:layout_width="fill_parent"
-              android:layout_height="wrap_content" 
-               >
-               <LinearLayout android:id="@+id/movieInfoGraphicLayout"
-                   android:layout_width="fill_parent"
-                   android:layout_height="wrap_content"
-                   android:layout_span="2" 
-                   >
-                   
-               </LinearLayout>
-           </TableRow>
-            
-        </TableLayout>
-
-    </TableRow>
-    
-    <TableRow
+    <LinearLayout
+        android:id="@+id/movieDetailsLayout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:gravity="bottom"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="15dp"
-     >
-        
-        <TextView android:id="@+id/movieBrowserPosterTitle"
-            android:text="Poster Title"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:gravity="center_horizontal"
-            android:textColor="#F0F0F0"
-            android:background="@drawable/rounded_corners"
-            android:textSize="16sp"
-            />
-        
-    </TableRow>
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginRight="10dp"
+        android:background="#80000000"
+        android:orientation="horizontal" >
 
-    <TableRow
+        <TextView
+            android:layout_width="400dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="5dp"
+            android:text="Movie Details"
+            android:textColor="#F0F0F0"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="450dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="Summary"
+            android:textColor="#F0F0F0"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/movieDetailsContainerRow2"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="10dp"
+        
+        android:layout_below="@+id/movieDetailsLayout"
+        
+        android:layout_centerHorizontal="true"
+        android:orientation="horizontal"
+        android:background="#80000000">
+
+        <TextView
+            android:id="@+id/movieCastInfo"
+            android:layout_width="400dp"
+            android:layout_height="150dip"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="5dp"
+            android:maxLines="8"
+            android:maxWidth="350dp"
+            android:textColor="#F0F0F0"
+            android:textSize="16sp" />
+        
+         <TextView
+            android:id="@+id/movieSummary"
+            android:layout_width="450dp"
+            android:layout_height="150dp"
+            android:maxLines="8"
+            android:layout_marginRight="5dp"
+            android:paddingRight="10dp"
+            android:textColor="#F0F0F0"
+            android:textSize="15sp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/movieInfoGraphicLayout"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginRight="10dp"
+        android:layout_centerHorizontal="true"       
+        android:background="#80000000"        
+        android:layout_below="@+id/movieDetailsContainerRow2" >
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="900dip"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/tableRow2"
+        android:layout_marginLeft="20dip"
+        android:layout_marginTop="30dip"
+        android:layout_marginRight="10dp"
+        android:gravity="center"
+        android:layout_gravity="center_horizontal"
+        android:background="#80000000"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/movieBrowserPosterTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Poster Title"
+            android:textColor="#F0F0F0"
+            android:textSize="20sp" />
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/tableRow2"
         android:layout_width="900dip"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dip"
+        android:layout_alignParentBottom="true"
         android:layout_marginLeft="20dip"
-        android:gravity="bottom"
-         >
+        android:layout_marginTop="30dip"
+        android:layout_marginRight="10dp"
+        
+        android:gravity="bottom" >
 
         <Gallery
             android:id="@+id/moviePosterGallery"
             android:layout_width="match_parent"
-            android:layout_height="120dp"
-            android:background="#50000000"
-            android:spacing="50dp"
-            android:animationDuration="1">
-           <requestFocus/>
+            android:layout_height="150dp"
+            android:animationDuration="1"
+            android:background="#80000000"
+            android:spacing="50dp" >
+
+            <requestFocus />
         </Gallery>
+    </LinearLayout>
 
-    </TableRow>
-
-</TableLayout>
+</RelativeLayout>
