Add Aspect Ratio infographic
Added aspect ration infographic to the Movies and Episode screens.
Removed the TV Rating from the episode screen as there are no good tv
specific rating logos in any of the skins we base this off.

--- a/PlexAppClient/res/layout/activity_movie_browser.xml
+++ b/PlexAppClient/res/layout/activity_movie_browser.xml
@@ -25,7 +25,7 @@
             android:layout_marginLeft="30dp"
             android:layout_marginRight="5dp"
             android:layout_marginTop="5dp"
-            android:text="Movie Details"
+            android:text="Video Details"
             android:textColor="#F0F0F0"
             android:textSize="20sp"
             android:textStyle="bold" />
