--- a/PlexAppClient/res/layout/activity_movie_browser.xml
+++ b/PlexAppClient/res/layout/activity_movie_browser.xml
@@ -19,7 +19,7 @@
         android:background="#80000000"
         android:orientation="horizontal" >
         
-        <TextView android:id="@+id/screenName"
+        <TextView android:id="@+id/movieCategoryName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="15sp"
