--- a/PlexAppClient/res/layout/activity_movie_browser.xml
+++ b/PlexAppClient/res/layout/activity_movie_browser.xml
@@ -22,6 +22,7 @@
         <TextView android:id="@+id/movieCategoryName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
             android:textSize="15sp"
             android:text="Category:"
             android:focusable="false"/>
@@ -39,11 +40,13 @@
          <Spinner android:id="@+id/movieCategoryFilter2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:gravity="left"                        
             android:prompt="@string/movie_category_prompt2"
+            android:background="@drawable/spinner_background"            
             android:spinnerMode="dropdown"
-            android:visibility="invisible"/>
-        
-            
+            android:visibility="invisible"
+            android:focusable="true"/>
         
    </LinearLayout>        
     
