--- a/PlexAppClient/res/layout/video_playback.xml
+++ b/PlexAppClient/res/layout/video_playback.xml
@@ -3,11 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:id="@+id/video_playeback" >
+    android:id="@+id/video_playeback"
+    android:background="#000000" >
     
     <SurfaceView android:id="@+id/surfaceView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_gravity="center_horizontal"
         android:layout_weight="30"
         />
 
