Fix aspect ratio on LG and Android 4.2.1.
This should fix Issue #12.  The underlying problem was the use of
LinearLayout instead of RelativeLayout.  Also a layout_weight had been
set which was causing the SurfaceView to take up the whole screen in
certain systems.   By switching the parent view to a RelativeLayout and
specifying that the SurfaceView should be centered in the parent, this
correctly no keeps the specified aspect ratios.

Tested on Vizio CoStar with Google TV 3, and Nexus 7 running Android
4.2.1.  Bug was reproducable on Android 4.2.1.

--- a/PlexAppClient/res/xml/preferences.xml
+++ b/PlexAppClient/res/xml/preferences.xml
@@ -4,6 +4,7 @@
         <EditTextPreference android:summary="The domain name or IP Address for your server" android:title="Server Address" android:key="server" android:defaultValue=""/>
         <EditTextPreference android:summary="The port number for the server (usually 32400)" android:title="Server Port" android:key="serverport" android:defaultValue="32400"/>
         <CheckBoxPreference android:summary="Use external media player" android:title="External Player" android:key="external_player"/>
+        <CheckBoxPreference android:summary="Prefer plex medias server's aspect ratio" android:title="Plex Aspect Ratio" android:key="plex_aspect_ratio"/>
     </PreferenceCategory>
     
 
